testdata/baselines/reference/submodule/compiler/esmNoSynthesizedDefault(module=preserve).errors.txt
/index.ts(7,8): error TS2339: Property 'default' does not exist on type 'typeof import("/node_modules/mdast-util-to-string/index")'.


==== /node_modules/mdast-util-to-string/package.json (0 errors) ====
    { "type": "module" }
    
==== /node_modules/mdast-util-to-string/index.d.ts (0 errors) ====
    export function toString(): string;
    
==== /index.ts (1 errors) ====
    import mdast, { toString } from 'mdast-util-to-string';
    mdast;
    mdast.toString();
    
    const mdast2 = await import('mdast-util-to-string');
    mdast2.toString();
    mdast2.default;
           ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type 'typeof import("/node_modules/mdast-util-to-string/index")'.
    